[Feat] FRAME 자리 추가 - 개구리에 겹치지 않는 자리를 데이터로 구분
- CosmeticSlot 에 FRAME(1000, 프레임) 을 더했다. 응답의 slots 는 11 개가 된다
- 슬롯에 composited 를 더했다. equippable 과 다른 축이다. 걸 수는 있지만 개구리 그림에
  겹치지 않는 자리가 생겼다. FRAME 만 false 다
- layerOrder 만 내려보내면 프론트는 순서대로 겹쳐 그리는 수밖에 없어 프레임이 개구리 위에 덮인다.
  이 값이 없으면 프론트가 "FRAME 은 예외" 를 코드에 박아야 하는데, 그건 layerOrder 를 응답에
  실어 보내기로 한 이유를 그대로 무르는 것이다. 뒤에 덧붙인 필드라 구버전 앱은 그대로 돈다
- 프레임은 옷장 목록에서 빼지 않는다. 개구리 합성에서만 빠진다
- 시드 63 개 / 프레임 8 종의 해금 자리 / FRAME 만 SVG 인 것 / 프레임 해금이 능력치별로
  판정되는 것 / 합성에서 빠지는 자리가 FRAME 뿐인 것을 테스트로 고정했다
- 같은 레벨에 두 개가 열리는 것은 허용하되 "같은 조건에 같은 자리" 는 막는 쪽으로 단언을 바꿨다.
  프레임을 계절 배경과 짝 맞추면서 출석 3 / 5 / 13 / 15 가 겹쳤고 그건 의도다